<resources>
    <string name="app_name">Heart Tower</string>

    <string name="top_login_text">Login</string>
    <string name="login">Login</string>
    <string name="Pass">Password</string>
    <string name="login_button_text">Войти</string>
    <string name="remember_password">Забыли пароль?</string>
    <string name="or_sing_up_using">Или войдите используя</string>
    <string name="type_login">Введите логин</string>
    <string name="type_pass">Ведите пароль</string>
    <string name="have_no_account">Еще не зарегистрированы?</string>
    <string name="REGISTER">ЗАРЕГИСТРИРОВАТСЯ</string>
    <string name="search">ПОИСК</string>
    <string name="profile">ПРОФИЛЬ</string>
    <string name="articles">СТАТЬИ</string>
    <string name="launch_error_message">Ошибка получения данных</string>
    <string name="type_mail">Введите email</string>
    <string name="type_phone">Введите номер телефона</string>
    <string name="mail">Email</string>
    <string name="phone">Номер телефона</string>
    <string name="gender">Пол</string>
    <string name="recovery">востановить</string>
    <string name="form_error">ошибка заполнения формы</string>
    <string name="send_button">Отправить</string>
    <string name="form_theme_hint">Тема</string>
    <string name="bach_form_text">Форма обратной связи</string>
    <string name="bach_form_description">Описание</string>
    <string name="enter_date_of_birth">Ведите дату рождения</string>
    <string name="i_search">Я ищу:</string>
    <string name="i_want_to_meet">Познакомлюсь:</string>
    <string name="purpose_of_dating">Цель знакомства:</string>
    <string name="height">Рост:</string>
    <string name="weight">Вес:</string>
    <string name="bodyType">Телосложение:</string>
    <string name="education">Образование:</string>
    <string name="knowledgeOfLanguages">Знание языков:</string>
    <string name="attitudeTowardsSmoking">Отношение к курению:</string>
    <string name="attitudeToAlcohol">Отношение к алкоголю:</string>
    <string name="orientation">Ориентация:</string>
    <string name="appearance">Внешность:</string>
    <string name="my_details">Мои данные:</string>
    <string name="Children">Дети:</string>
    <string name="Live">Проживание:</string>
    <string name="money_state">Материальное положение:</string>
    <string name="fields">поля обязательные для заполнения</string>
    <string name="age">Возраст</string>

    <string-array name="reg_data">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
</resources>
