<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.LoginFragment">

    <View
        android:id="@+id/login_form_container"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view3"
        android:layout_width="183dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon_container"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/logion_button_bacground"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_form_container"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/type_login"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toTopOf="@+id/login_form_container" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/type_pass"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo_googleplus"
        app:layout_constraintEnd_toEndOf="@+id/login_icon_container"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/login_icon_container"
        app:layout_constraintStart_toStartOf="@+id/login_icon_container" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo_twitter"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/top_login_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Pass"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintStart_toStartOf="@+id/reg_pass" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/have_no_account"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_textView"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/reg_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/REGISTER"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sing_up_using"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/login_icon_container" />

    <TextView
        android:id="@+id/recovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:text="@string/remember_password"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reg_pass"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <View
        android:id="@+id/login_icon_container"
        android:layout_width="131dp"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_form_container" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_person_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text"
        app:layout_constraintTop_toTopOf="@+id/login_edit_text" />

    <View
        android:id="@+id/view2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_lock_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/reg_pass"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toTopOf="@+id/reg_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>