<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.LoginFragment">

    <View
        android:id="@+id/login_form_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_second_form_back"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <View
        android:id="@+id/view3"
        android:layout_width="183dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/logion_button_bacground"
        android:elevation="5dp"
        android:text="@string/login_button_text"
        android:textColor="@color/text_colored"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_form_container"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_back"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/type_login"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:textColor="@color/text_color_main_white"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toTopOf="@+id/login_form_container" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_back"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/type_pass"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:textColor="@color/text_color_main_white"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="5dp"
        android:text="@string/login"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="5dp"
        android:text="@string/Pass"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/have_no_account"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/reg_textView"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/reg_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/REGISTER"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/recovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:elevation="5dp"
        android:padding="5dp"
        android:text="@string/remember_password"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_person_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text" />

    <View
        android:id="@+id/view2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_lock_black_24dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintStart_toStartOf="@+id/reg_pass" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_heart_tower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>