<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.PasswordRecoveryFragment">

    <View
        android:id="@+id/login_form_container"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_second_form_back"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/recovery_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/logion_button_bacground"
        android:elevation="5dp"
        android:text="@string/recovery"
        android:textColor="@color/text_colored"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_form_container"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toBottomOf="@+id/reg_login" />

    <EditText
        android:id="@+id/reg_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_back"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/type_mail"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:textColor="@color/text_color_main_white"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/recovery_button"
        app:layout_constraintEnd_toEndOf="@+id/login_form_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_form_container"
        app:layout_constraintTop_toTopOf="@+id/login_form_container" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="Restore pass."
        android:textColor="@color/text_color_main_white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="5dp"
        android:text="@string/mail"
        android:textColor="@color/text_color_main_white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_email_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_login"
        app:layout_constraintStart_toStartOf="@+id/reg_login"
        android:elevation="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>